# ChangeLog for dev-python/stsci-distutils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/stsci-distutils/ChangeLog,v 1.1 2012/02/04 19:29:47 xarthisius Exp $

*stsci-distutils-0.2.2 (04 Feb 2012)

  04 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> +metadata.xml,
  +stsci-distutils-0.2.2.ebuild:
  Initial import, ebuild written by me
