@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/stsci-distutils/Attic/stsci-distutils-0.2.2.ebuild,v 1.1 2012/02/04 19:29:47 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/stsci-distutils/Attic/stsci-distutils-0.2.2.ebuild,v 1.2 2012/02/04 19:46:53 xarthisius Exp $
 
 EAPI=4
 
@@ -19,5 +19,9 @@ LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
+
+DEPEND="dev-python/setuptools
+	dev-python/d2to1"
+RDEPEND="${DEPEND}"
 
 S=${WORKDIR}/${MY_P}
