@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/stsci-distutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/stsci-distutils/ChangeLog,v 1.1 2012/02/04 19:29:47 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/stsci-distutils/ChangeLog,v 1.2 2012/02/04 19:46:53 xarthisius Exp $
+
+  04 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org>
+  stsci-distutils-0.2.2.ebuild:
+  Add missing dependencies
 
 *stsci-distutils-0.2.2 (04 Feb 2012)
 
